# vql-ut

./: .gitlab-ci.yml  .tool-versions  .zenodo.json  0-AI-MANIFEST.a2ml  CHANGELOG.md  Cargo.toml  Containerfile  EXPLAINME.adoc  Justfile  PROOF-NEEDS.md  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  QUICKSTART-USER.adoc  README.adoc  ROADMAP.adoc  arcvix-10-level-query-safety.bib  arcvix-10-level-query-safety.tex  llm-warmup-dev.md  llm-warmup-user.md  rescript.json  selur-compose.toml  setup.sh  stapeln.toml
.github/workflows/: cargo-audit.yml  hypatia-scan.yml  static-analysis-gate.yml
.machine_readable/: ADJUST.contractile  CLADE.a2ml  ENSAID_CONFIG.a2ml  INTENT.contractile  MUST.contractile  TRUST.contractile
.machine_readable/6a2/: ECOSYSTEM.a2ml  META.a2ml  STATE.a2ml
.machine_readable/anchors/: ANCHOR.a2ml
.machine_readable/bot_directives/: echidnabot.a2ml
.machine_readable/compliance/reuse/: dep5
.machine_readable/contractiles/: INDEX.a2ml  _base.ncl
.machine_readable/contractiles/adjust/: adjust.ncl
.machine_readable/contractiles/bust/: Bustfile.a2ml
.machine_readable/contractiles/dust/: dust.ncl
.machine_readable/contractiles/intend/: Intentfile.a2ml  intend.ncl
.machine_readable/contractiles/must/: must.ncl
.machine_readable/contractiles/trust/: trust.ncl
benchmarks/: README.adoc
container/: Containerfile
contractiles/intend/: Intentfile.a2ml
contractiles/k9/: vcl-total-guard.k9.ncl
contractiles/must/: Mustfile.a2ml
contractiles/trust/: Trustfile.a2ml
docs/: vql-ut-grammar.ebnf
docs/architecture/: ARCHITECTURE.adoc  DECISIONS.adoc
docs/attribution/: CITATION.cff
docs/reports/audit/: 2026-03-30-vql-ut-audit.adoc  2026-03-31-vql-ut-publication-review.adoc
docs/supplementary/: composition-proof.adoc
src/bridges/: VclTotalAst.res  VclTotalBridge.res  VclTotalParser.res  VqlUtAst.res  VqlUtBridge.res  VqlUtParser.res
src/core/: Checker.idr  Composition.idr  Epistemic.idr  Grammar.idr  Levels.idr  Schema.idr
src/definitions/: VclTotalDefinitions.res  VqlUtDefinitions.res
src/errors/: VclTotalError.res  VqlUtError.res
src/interface/abi/: Foreign.idr  Layout.idr  README.adoc  Types.idr
src/interface/dap/src/: lib.rs  main.rs
src/interface/echidna-client/: Cargo.toml
src/interface/echidna-client/src/: lib.rs
src/interface/echidna-client/tests/: exchange_roundtrip.rs
src/interface/ffi/src/: main.zig
src/interface/ffi/test/: integration_test.zig
src/interface/fmt/src/: lib.rs  main.rs
src/interface/lint/src/: lib.rs  main.rs
src/interface/lsp/src/: lib.rs  main.rs
tests/: e2e_test.rs  fuzz_test.rs  integration_test.rs
tests/aspect/: README.adoc
tests/e2e/: README.adoc
tests/fuzz/: README.adoc  quickcheck.rs
