# SPDX-License-Identifier: PMPL-1.0-or-later
[package]
name = "vcl-total"
version = "0.1.0"
edition = "2021"
license = "PMPL-1.0-or-later"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
repository = "https://github.com/hyperpolymath/vql-ut"
description = "VCL-total: 10-level type-safe query language for VeriSimDB"

# The top-level crate re-exports the formatter and linter for integration testing.
# LSP and DAP are separate binaries with heavier dependencies.

[dependencies]
vcltotal-fmt = { path = "src/interface/fmt" }
vcltotal-lint = { path = "src/interface/lint" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"

[[bench]]
name = "vcl_bench"
harness = false

[workspace]
members = [
    ".",
    "src/core",
    "src/interface",
    "src/interface/echidna-client",
    "src/interface/fmt",
    "src/interface/lint",
    "src/interface/lsp",
    "src/interface/dap",
]
